src/routes/Addons/Addon/styles.less
.addon {
    display: inline-grid;
    width: var(--addon-width);
    padding: 1.6em;
    background-color: var(--color-backgroundlighter);
    grid-template-columns: 1fr 6fr 3fr;
    grid-template-rows: calc(0.03 * var(--addon-width)) calc(0.03 * var(--addon-width)) auto;
    grid-template-areas:
        "logo header buttons"
        "logo type buttons"
        "logo description buttons";

    .logo-container {
        grid-area: logo;

        .logo {
            width: calc(0.12 * var(--addon-width));
            height: calc(0.12 * var(--addon-width));
            padding: 20%;
            fill: var(--color-surfacelighter);
            background-color: var(--color-backgrounddarker);
        }
    }

    .header-container {
        grid-area: header;
        display: flex;
        align-items: center;
        overflow: hidden;
        padding-left: 4%;

        .header {
            width: 100%;
            display: flex;
            align-items: baseline;

            .name {
                max-width: 80%;
                margin-right: 3%;
                font-size: 1.8em;
                color: var(--color-surfacelighter);
                overflow: hidden;
                white-space: pre;
                text-overflow: ellipsis;
            }

            .version {
                flex: 1;
                color: var(--color-surface);
                overflow: hidden;
                white-space: pre;
                text-overflow: ellipsis;
            }
        }
    }

    .type {
        grid-area: type;
        display: flex;
        align-items: center;
        padding-left: 4%;
        color: var(--color-secondarylighter);
    }

    .description {
        grid-area: description;
        padding-left: 4%;
        color: var(--color-surfacelighter);
        overflow-wrap: break-word;
    }

    .buttons {
        grid-area: buttons;
        display: flex;
        flex-direction: column;
        align-items: flex-end;

        .button {
            width: 85%;
            height: calc(0.05 * var(--addon-width));
            cursor: pointer;
            display: flex;
            align-items: center;
            justify-content: center;
            border-width: var(--button-border-width);
            border-style: solid;

            .icon {
                width: 8%;
                margin-right: 3%;
            }

            .label {
                font-size: 1.1em;
                color: var(--color-surfacelighter);
            }

            &.share-button {
                margin-top: 4em;
                border-color: var(--color-secondarylighter);

                .icon {
                    fill: var(--color-secondarylighter);
                }

                .label {
                    color: var(--color-secondarylighter);
                }

                &:hover {
                    border-color: var(--color-secondarylight);
                    background-color: var(--color-secondarylight);

                    .icon {
                        fill: var(--color-surfacelighter);
                    }

                    .label {
                        color: var(--color-surfacelighter);
                    }
                }
            }

            &.install-button {
                border-color: var(--color-signal5);
                background-color: var(--color-signal5);

                &:hover {
                    background-color: var(--color-signal560);
                }
            }

            &.uninstall-button {
                border-color: var(--color-surfacedark);

                &:hover {
                    background-color: var(--color-surfacedark);
                }
            }

            &:hover {
                border: none;
            }
        }
    }
}

